/*
 * $Id: ChangeLog,v 1.2702 2004/03/31 19:29:44 likewolf Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2004-04-01 03:20 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * tests/pp_harb.ch
    ! put function protoypes hb_hrbAsmCreateFun() under extern "C"

2004-03-31 23:40 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/compiler/cmdcheck.c
  * source/compiler/hbusage.c
    ! Fixed a little bug: -d on command line without a #define name should
      not create an empty #define.
    + Added a new command line option, -undef:<id>, which undefines a
      predefined #define.

2004-03-31 12:45 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rdd/dbcmd.c
    ! Fix RDDSETDEFAULT function. Missing set '\0' at end of string
      after strncpy().

2004-03-31 21:10 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * include/hashapi.h
    ! put function protoypes under extern "C"

2004-03-31 18:00 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/compiler/harbour.sly
    + Generate line number information for the debugger for DO CASE statement
      (borrowed from Harbour, by Ryszard Glab).
  * source/debug/debugger.prg
    + Show line number information when source file can't be found
      (borrowed from Harbour, by Ryszard Glab).

2004-03-31 15:45 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/vm/macro.c
    ! Fixed hb_compMemvarGenPCode(), hb_compGenPopVar(),
      hb_compGenPopAliasedVar() to not set any error flag and not generate
      associated pcode, when macro expression references an undeclared
      memvar in assignment context if HB_MACRO_GEN_TYPE is set (that is,
      when evaluating the expression type). Updated hb_compMemvarGenPCode()
      calls in hb_compGenPushVar(), hb_compGenPushVarRef(),
      hb_compGenPushMemVarRef(), hb_compGenPushAliasedVar() to reflect the